--- a/package.json
+++ b/package.json
@@ -8,7 +8,11 @@
     "build": "ng build",
     "test": "ng test",
     "lint": "ng lint",
-    "e2e": "ng e2e"
+    "e2e": "ng e2e",
+    "sw": "sw-precache --root=dist --config=sw-precache-config.js",
+    "build:local": "ng build --prod && npm run sw && cd dist && live-server --port=4200 --host=localhost --entry-file=/index.html",
+    "build:prod": "ng build --prod && npm run sw && firebase deploy",
+    "static-serve": "cd dist && live-server --port=4200 --host=localhost --entry-file=/index.html"
   },
   "private": true,
   "dependencies": {
@@ -32,7 +36,9 @@
     "node-sass": "^4.7.2",
     "rxjs": "^5.5.6",
     "swiper": "4.1.0",
-    "zone.js": "^0.8.20"
+    "zone.js": "^0.8.20",
+    "live-server": "^1.2.0",
+    "sw-precache": "^5.2.0"
   },
   "devDependencies": {
     "@angular/cli": "^1.7.2",
